пользователи в рамках одного коллектива могут обновлять и удалять слоты, другие не могут (кроме админов)