@@ -3,19 +3,29 @@ package ru.otus.hw.config.security;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.transaction.annotation.Transactional;
+import ru.otus.hw.domain.Group;
 import ru.otus.hw.domain.User;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class SecurityUserDetails implements UserDetails {
 
     private final User user;
 
+    private List<Group> groups;
+
     public SecurityUserDetails(User user) {
         this.user = user;
     }
 
+    public void setGroups(List<Group> groups) {
+        this.groups = groups;
+    }
+
+    @Transactional(readOnly = true)
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return getRoles(user);
@@ -58,9 +68,24 @@ public class SecurityUserDetails implements UserDetails {
     }
 
     private List<SimpleGrantedAuthority> getRoles(User user) {
-        return user.getRoles().stream()
+        //сначала обычные роли
+        List<SimpleGrantedAuthority> roles = user.getRoles().stream()
                 .map(role -> "ROLE_" + role)
                 .map(SimpleGrantedAuthority::new)
-                .toList();
+                .collect(Collectors.toList());
+
+        //затем динамические
+        if (groups != null) {
+            List<SimpleGrantedAuthority> groupRoles = groups.stream()
+                    .map(group -> "ROLE_GROUP_" + group.getId())
+                    .map(SimpleGrantedAuthority::new)
+                    .toList();
+
+            roles.addAll(groupRoles);
+        }
+
+
+        //возвращаем
+        return roles;
     }
 }
